# HistoQC

./: .gitignore  .readthedocs.yaml  AnnotationModule.py  BaseImage.py  BasicModule.py  BlurDetectionModule.py  BrightContrastModule.py  BubbleRegionByRegion.py  CHANGELOG.md  ClassificationModule.py  CodeOfConduct.md  ContributingGuidelines.md  DeconvolutionModule.py  Dockerfile  Documentation.docx  GridDetectionModule.py  HistogramModule.py  LICENSE.txt  LightDarkModule.py  LocalTextureEstimationModule.py  MANIFEST.in  MorphologyModule.py  PenMarkingModule.py  Readme.md  SaveModule.py  config.ini  config_clinical.ini  config_first.ini  config_ihc.ini  config_light.ini  documentation_notes.txt  environment.devenv.yml  index.html  pyproject.toml  qc_pipeline.py  requirements.txt  rmm_log.txt  setup.cfg  setup.py  state_test.ipynb
.github/workflows/: docker-image.yml
AnnotationModule/: TCGA-EJ-5518-01Z-00-DX1.xml  config_example_AnnotationModule.ini  config_example_GeoJSON.ini  config_example_annotation.ini  geojson_example.json  holed.geojson
UserInterface/: index.html
UserInterface/css/: index.css
UserInterface/scripts/: bar_chart.js  chart_init.js  data_load.js  global_config.js  global_vars.js  image_init.js  index.js  multi_select_mode.js  parallel_chart.js  scatter_chart.js  select_mode.js  table_init.js
currentVersion/: index.html
currentVersion/css/: index.css
currentVersion/libs/DataTables/: datatables.css  datatables.min.css
currentVersion/scripts/: chart_init.js  data_load.js  detail_mode.js  global_config.js  global_vars.js  image_init.js  index.js  select_mode.js  selector_init.js  table_init.js
docs/: requirements.txt
docs/source/: conf.py  configuring_histoqc.md  index.md  installation.md  running_histoqc.md  usage.md  viewing_results.md
docs/source/_static/: custom.css  set_default_dark_theme.js
docs/source/wiki/: adding_classification_type_modules.md  current_modules.md  extending_histoqc.md  final_notes.md  index.md  philosophy.md  pipeline_configuration.md  suggested_workflow.md
histoqc/: AnnotationModule.py  BaseImage.py  BasicModule.py  BasicModule.py.bak_selemfix2  BasicModule.py.bak_varrestore  BlurDetectionModule.py  BrightContrastModule.py  BubbleRegionByRegion.py  ClassificationModule.py  ClassificationModule.py.bak_selemfix  ClassificationModule.py.bak_selemfix2  DeconvolutionModule.py  HistogramModule.py  LightDarkModule.py  LightDarkModule.py.bak_varrestore  LocalTextureEstimationModule.py  MorphologyModule.py  MorphologyModule.py.bak_selemfix2  MorphologyModule.py.bak_varrestore  SaveModule.py  TileExtractionModule.py  __init__.py  __main__.py  _import_openslide.py  _log_conf.py  _logging.py  _parser.py  _pipeline.py  _worker.py  _worker_setup.py
histoqc/annotations/: annot_collection.py
histoqc/annotations/annotation/: base.py  geojson.py  imagescope.py
histoqc/annotations/io_utils/: json.py
histoqc/array_adapter/: __init__.py  adapter.py  array_api_compat.py  func_mapping.py  typing.py
histoqc/config/: __init__.py  __main__.py  _parser.py  config.ini  config_clinical.ini  config_first.ini  config_ihc.ini  config_light.ini  config_v2.1.ini
histoqc/data/: __init__.py  __main__.py
histoqc/data/models/pen_markings_he/: he.tsv
histoqc/functional/: __init__.py  blur_detection.py  bright_contrast.py  utilities.py
histoqc/image_core/: BaseImage.py  construct.py  factory.py  meta.py  pil_base.py  wsi_base.py
histoqc/image_core/image_handle/: __init__.py  base_class.py  os_handle.py  pil_handle.py
histoqc/import_wrapper/: __init__.py  cupy_extra.py  dask_cuda.py  helper.py  openslide.py  typing.py
histoqc/lite/: __init__.py  implementation.py
histoqc/module/: __init__.py
histoqc/tests/: conftest.py  coverage.xml  readme.md  test_base_image.py  test_config_cli.py  test_data_cli.py  test_images_tsv_results.py  test_img_handle.py  test_pipeline_api.py  test_pipeline_cli.py  test_suite.py  test_ui_cli.py  test_utils.py
histoqc/ui/: HQC_html.py  __init__.py  __main__.py  _parser.py  app.py
histoqc/ui/UserInterface/: index.html
histoqc/ui/UserInterface/css/: index.css
histoqc/ui/UserInterface/scripts/: bar_chart.js  chart_init.js  data_load.js  global_config.js  global_vars.js  image_init.js  index.js  multi_select_mode.js  parallel_chart.js  scatter_chart.js  select_mode.js  table_init.js
histoqc/ui/static/css/: image-view.css  index.css  scatterplot.css  style.css
histoqc/ui/static/js/: cohortfinder.js  global_config.js  global_vars.js  histoqc.js  image_init.js  image_init_old.js  image_init_solved.js  popovers.js  scatterplot.js  slickgrid.js
histoqc/ui/static/slickgrid_libs/: d3.v4.min.js  index.css  parcoords.css  scatter.js  style.css  (+1 more)
histoqc/ui/templates/: abort.html  index.html
histoqc/wsi_handles/: base.py  constants.py  cuimage_handle.py  openslide_handle.py
histoqc/wsihandles/: CuImageHandle.py  DicomHandle.py  OpenSlideHandle.py  WSIImageHandle.py  __init__.py  utils.py
ray_cluster_launchers/: aws-ray-cluster-launcher-template.yaml  azure-ray-cluster-launcher-template.yaml  gcp-ray-cluster-launcher-template.yaml  readme.md
scripts/: datatables.css  datatables.js  datatables.min.css  datatables.min.js
(+18 files in other folders)
