[build-system]
requires = ["setuptools >= 64", "setuptools_scm >= 8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "histoqc"
license = {file = "LICENSE.txt"}
version = "2.0"
authors = [{name = "Andrew Janowczyk"}]
description = "HistoQC is an open-source digital pathology quality control tool."
readme = {file = "README.md", content-type = "text/markdown"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Digital Pathology",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Utilities",
    "Operating System :: Unix"
]

requires-python = ">=3.9"
dependencies = [
    "openslide-python==1.1.2",
    "scikit-image~=0.19.2",
    "scikit-learn~=1.2.1",
    "numpy~=1.23.5",
    "scipy==1.10.0",
    "matplotlib~=3.7.1",
    "dill==0.3.3",
    "pytest~=7.1.3",
    "pytest-cov~=4.1.0",
    "importlib-resources",
    "typing-extensions",
    "lazy-property",
    "requests~=2.28.1",
    "Pillow~=9.4.0",
    "setuptools~=65.6.3",
    "shapely~=2.0.1",
    "flask~=2.3.2",
    "geojson~=3.1.0",
    "cohortfinder==1.0.1"
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "requests"
]

# ----------------------------------------------------------------------------------
[project.urls]
Homepage = "https://github.com/choosehappy/HistoQC"
Documentation = "https://histoqc.readthedocs.io/"

# ----------------------------------------------------------------------------------
[project.scripts]
"histoqc" = "histoqc.__main__:main"
"histoqc.ui" = "histoqc.ui.__main__:main"
"histoqc.data" = "histoqc.data.__main__:main"
"histoqc.config" = "histoqc.config.__main__:main"

# ----------------------------------------------------------------------------------
[tool.setuptools]
packages = ["histoqc", "histoqc.ui", "histoqc.data", "histoqc.config"]

# ----------------------------------------------------------------------------------
[tool.setuptools_scm]
version_file = "histoqc/_version.py"

# ----------------------------------------------------------------------------------
[tool.pytest.ini_options]
addopts = "-v"

# ----------------------------------------------------------------------------------
[tool.coverage.run]
source = ["histoqc"]

# ----------------------------------------------------------------------------------
[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if MYPY:",
  "except ImportError:",
]

[tool.distutils.egg_info]
egg_base = "../"