[metadata]
name = histoqc
url = https://github.com/choosehappy/HistoQC
download_url = https://github.com/choosehappy/HistoQC
license = BSD
license_file = LICENSE.txt
description = HistoQC is an open-source quality control tool for digital pathology slides
long_description = file: Readme.md
long_description_content_type = text/markdown
author = Andrew Janowczyk
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Utilities
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS


[options]
packages =
    histoqc
    histoqc.config
    histoqc.data
    histoqc.ui
    histoqc.import_wrapper
python_requires = >=3.7
install_requires =
    importlib_resources; python_version < '3.9'
    matplotlib
    numpy
    scikit-image
    scikit-learn
    scipy
    openslide-python
    dill

[options.extras_require]
tests =
    pytest
    pytest-cov
    requests

[options.entry_points]
console_scripts =
    histoqc_pipeline = histoqc.__main__:main
    histoqc_ui = histoqc.ui.__main__:main
